--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 <body>
 <div id="spacer">
 <form action="/submit" method="post">
+
+    <div class="flex-container">
     <!-- Text Input with Placeholder -->
+    <div class="flex-item">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" placeholder="Enter your name" required>
-    
+    </div>
+
+    <div class="flex-item">
     <!-- Email Input -->
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" placeholder="name@example.com" required>
+    </div>
     
+    </div>
     <!-- Number Input -->
     <label for="age">Age:</label>
     <input type="number" id="age" name="age" min="0" max="120">
